1.6.4
-----
1. Add Chinese translations - thanks to LiShaohui.

1.6.3
-----
 1. Fix sunken kwin button backgrounds when using background gradients.
 2. In config dialog, dont enforce bordered popup menus if rounded.
 3. Apply background opacity to menubars and toolbars.
 4. Fix issues with konqueror's combo-boxes and dark menubars.
 5. Fix display of rekonq titlebar when blending menubar and titlebar. Rekonq
    has a menubar, but it's hidden - QtCurve detected the menubar, and informed
    the kwin style of this, cuasing the titlebar to have an incorrect gradient.
 6. Disable statusbar hiding for rekonq - it does not use standard statusbars.
 7. When hiding status/menubars via kwin buttons, only re-act if there has been more
    then 1/2 a second between presses.
 8. Dont hightlight menu item arrows when not enabled.
 9. When initialising, selecting a preset, or importing a settings file, dont update
    preview until fully loaded.
10. Use preview windows close button to detatch/attach preview.
11. Fix menubar/titlebar blending for Thunderbird's 'show message in new window'
12. Disable the support for 'fix parent-less dialog' option - this causes too many
    issues with applications to be worth the fuss. If you really want this enabled,
    use the -DQTC_ENABLE_PARENTLESS_DIALOG_FIX_SUPPORT=true cmake option.

1.6.2
-----
 1. Fix light border on kwin titlebars when using background opacity
    and gradients.
 2. Dont add light border to kwin titlebars if not using side borders.
 3. Add option to use light, dark, or shadow for outer and inner kwin borders.
 4. Write tooltipAppearance setting to config file!
 5. Always used flat menus for OpenOffice.org
 6. Allow to specify titlebar pad in the range -5 to +10
 7. Calculate font size to use for hide menu/status bar kwin buttons based
    upon button height. If too small, do not draw border.
 8. Restore the minimum titlebar heights to those of the 1.5 release.